@@ -83,19 +83,19 @@ CONFIGURING THE BUILD
     You can also individually set the paths to the include directory and
     the library directory with --with-krb5-include and --with-krb5-lib.
     You may need to do this if Autoconf can't figure out whether to use
-    lib, lib32, or lib64 on your platform.  Note that these settings
-    aren't used if a krb5-config script is found.
+    lib, lib32, or lib64 on your platform.  If these flags are used, any
+    krb5-config script is ignored.
 
     To specify a particular krb5-config script to use, either set the
-    KRB5_CONFIG environment variable or pass it to configure like:
+    PATH_KRB5_CONFIG environment variable or pass it to configure like:
 
-        ./configure KRB5_CONFIG=/path/to/krb5-config
+        ./configure PATH_KRB5_CONFIG=/path/to/krb5-config
 
     To not use krb5-config and force library probing even if there is a
-    krb5-config script on your path, set KRB5_CONFIG to a nonexistent
+    krb5-config script on your path, set PATH_KRB5_CONFIG to a nonexistent
     path:
 
-        ./configure KRB5_CONFIG=/nonexistent
+        ./configure PATH_KRB5_CONFIG=/nonexistent
 
     Similarly, normally configure will use curl-config to determine the
     flags to use to compile with cURL.  If curl-config isn't found, it
