@@ -1,17 +1,18 @@
-dnl Find the compiler and linker flags for Kerberos v5.
+dnl Find the compiler and linker flags for Kerberos.
 dnl
-dnl Finds the compiler and linker flags for linking with Kerberos v5
-dnl libraries.  Provides the --with-krb5, --with-krb5-include, and
-dnl --with-krb5-lib configure options to specify non-standard paths to the
-dnl Kerberos libraries.  Uses krb5-config where available unless reduced
-dnl dependencies is requested.
+dnl Finds the compiler and linker flags for linking with Kerberos libraries.
+dnl Provides the --with-krb5, --with-krb5-include, and --with-krb5-lib
+dnl configure options to specify non-standard paths to the Kerberos libraries.
+dnl Uses krb5-config where available unless reduced dependencies is requested
+dnl or --with-krb5-include or --with-krb5-lib are given.
 dnl
 dnl Provides the macro RRA_LIB_KRB5 and sets the substitution variables
 dnl KRB5_CPPFLAGS, KRB5_LDFLAGS, and KRB5_LIBS.  Also provides
 dnl RRA_LIB_KRB5_SWITCH to set CPPFLAGS, LDFLAGS, and LIBS to include the
 dnl Kerberos libraries, saving the current values first, and
 dnl RRA_LIB_KRB5_RESTORE to restore those settings to before the last
-dnl RRA_LIB_KRB5_SWITCH.
+dnl RRA_LIB_KRB5_SWITCH.  HAVE_KERBEROS will always be defined if RRA_LIB_KRB5
+dnl is used.
 dnl
 dnl If KRB5_CPPFLAGS, KRB5_LDFLAGS, or KRB5_LIBS are set before calling these
 dnl macros, their values will be added to whatever the macros discover.
@@ -36,7 +37,7 @@ dnl The canonical version of this file is maintained in the rra-c-util
 dnl package, available at <http://www.eyrie.org/~eagle/software/rra-c-util/>.
 dnl
 dnl Written by Russ Allbery <rra@stanford.edu>
-dnl Copyright 2005, 2006, 2007, 2008, 2009, 2010
+dnl Copyright 2005, 2006, 2007, 2008, 2009, 2010, 2011
 dnl     The Board of Trustees of the Leland Stanford Junior University
 dnl
 dnl This file is free software; the authors give unlimited permission to copy
@@ -44,7 +45,7 @@ dnl and/or distribute it, with or without modifications, as long as this
 dnl notice is preserved.
 
 dnl Save the current CPPFLAGS, LDFLAGS, and LIBS settings and switch to
-dnl versions that include the Kerberos v5 flags.  Used as a wrapper, with
+dnl versions that include the Kerberos flags.  Used as a wrapper, with
 dnl RRA_LIB_KRB5_RESTORE, around tests.
 AC_DEFUN([RRA_LIB_KRB5_SWITCH],
 [rra_krb5_save_CPPFLAGS="$CPPFLAGS"
@@ -74,14 +75,14 @@ AC_DEFUN([_RRA_LIB_KRB5_PATHS],
         [AS_IF([test x"$rra_krb5_root" != x/usr],
             [KRB5_CPPFLAGS="-I${rra_krb5_root}/include"])])])])
 
-dnl Does the appropriate library checks for reduced-dependency Kerberos v5
+dnl Does the appropriate library checks for reduced-dependency Kerberos
 dnl linkage.  The single argument, if true, says to fail if Kerberos could not
 dnl be found.
 AC_DEFUN([_RRA_LIB_KRB5_REDUCED],
 [RRA_LIB_KRB5_SWITCH
  AC_CHECK_LIB([krb5], [krb5_init_context], [KRB5_LIBS="-lkrb5"],
      [AS_IF([test x"$1" = xtrue],
-         [AC_MSG_ERROR([cannot find usable Kerberos v5 library])])])
+         [AC_MSG_ERROR([cannot find usable Kerberos library])])])
  LIBS="$KRB5_LIBS $LIBS"
  AC_CHECK_FUNCS([krb5_get_error_message],
      [AC_CHECK_FUNCS([krb5_free_error_message])],
@@ -98,7 +99,7 @@ AC_DEFUN([_RRA_LIB_KRB5_REDUCED],
                   AC_CHECK_HEADERS([et/com_err.h])])])])])
  RRA_LIB_KRB5_RESTORE])
 
-dnl Does the appropriate library checks for Kerberos v5 linkage when we don't
+dnl Does the appropriate library checks for Kerberos linkage when we don't
 dnl have krb5-config or reduced dependencies.  The single argument, if true,
 dnl says to fail if Kerberos could not be found.
 AC_DEFUN([_RRA_LIB_KRB5_MANUAL],
@@ -138,7 +139,7 @@ AC_DEFUN([_RRA_LIB_KRB5_MANUAL],
      AC_CHECK_LIB([krb5], [krb5_cc_default],
         [KRB5_LIBS="-lkrb5 $rra_krb5_extra"],
         [AS_IF([test x"$1" = xtrue],
-            [AC_MSG_ERROR([cannot find usable Kerberos v5 library])])],
+            [AC_MSG_ERROR([cannot find usable Kerberos library])])],
         [$rra_krb5_extra])],
     [-lasn1 -lcom_err -lcrypto $rra_krb5_extra])
  LIBS="$KRB5_LIBS $LIBS"
@@ -166,6 +167,42 @@ AC_DEFUN([_RRA_LIB_KRB5_CHECK],
      _RRA_LIB_KRB5_PATHS
      _RRA_LIB_KRB5_MANUAL([$1])])])
 
+dnl Determine Kerberos compiler and linker flags from krb5-config.  Does the
+dnl additional probing we need to do to uncover error handling features, and
+dnl falls back on the manual checks.
+AC_DEFUN([_RRA_LIB_KRB5_CONFIG],
+[AC_ARG_VAR([PATH_KRB5_CONFIG], [Path to krb5-config])
+ AS_IF([test x"$rra_krb5_root" != x && test -z "$PATH_KRB5_CONFIG"],
+     [AS_IF([test -x "${rra_krb5_root}/bin/krb5-config"],
+         [PATH_KRB5_CONFIG="${rra_krb5_root}/bin/krb5-config"])],
+     [AC_PATH_PROG([PATH_KRB5_CONFIG], [krb5-config], [],
+         [${PATH}:/usr/kerberos/bin])])
+ AS_IF([test x"$PATH_KRB5_CONFIG" != x && test -x "$PATH_KRB5_CONFIG"],
+     [AC_CACHE_CHECK([for krb5 support in krb5-config],
+         [rra_cv_lib_krb5_config],
+         [AS_IF(["$PATH_KRB5_CONFIG" 2>&1 | grep krb5 >/dev/null 2>&1],
+             [rra_cv_lib_krb5_config=yes],
+             [rra_cv_lib_krb5_config=no])])
+      AS_IF([test x"$rra_cv_lib_krb5_config" = xyes],
+          [KRB5_CPPFLAGS=`"$PATH_KRB5_CONFIG" --cflags krb5 2>/dev/null`
+           KRB5_LIBS=`"$PATH_KRB5_CONFIG" --libs krb5 2>/dev/null`],
+          [KRB5_CPPFLAGS=`"$PATH_KRB5_CONFIG" --cflags 2>/dev/null`
+           KRB5_LIBS=`"$PATH_KRB5_CONFIG" --libs 2>/dev/null`])
+      KRB5_CPPFLAGS=`echo "$KRB5_CPPFLAGS" | sed 's%-I/usr/include ?%%'`
+      _RRA_LIB_KRB5_CHECK([$1])
+      RRA_LIB_KRB5_SWITCH
+      AC_CHECK_FUNCS([krb5_get_error_message],
+          [AC_CHECK_FUNCS([krb5_free_error_message])],
+          [AC_CHECK_FUNCS([krb5_get_error_string], [],
+              [AC_CHECK_FUNCS([krb5_get_err_txt], [],
+                  [AC_CHECK_FUNCS([krb5_svc_get_msg],
+                      [AC_CHECK_HEADERS([ibm_svc/krb5_svc.h], [], [],
+                          [#include <krb5.h>])],
+                      [AC_CHECK_HEADERS([et/com_err.h])])])])])
+      RRA_LIB_KRB5_RESTORE],
+     [_RRA_LIB_KRB5_PATHS
+      _RRA_LIB_KRB5_MANUAL([$1])])])
+
 dnl The core of the library checking, shared between RRA_LIB_KRB5 and
 dnl RRA_LIB_KRB5_OPTIONAL.  The single argument, if "true", says to fail if
 dnl Kerberos could not be found.
@@ -174,43 +211,12 @@ AC_DEFUN([_RRA_LIB_KRB5_INTERNAL],
  AS_IF([test x"$rra_reduced_depends" = xtrue],
     [_RRA_LIB_KRB5_PATHS
      _RRA_LIB_KRB5_REDUCED([$1])],
-    [AC_ARG_VAR([KRB5_CONFIG], [Path to krb5-config])
-     AS_IF([test x"$rra_krb5_root" != x && test -z "$KRB5_CONFIG"],
-         [AS_IF([test -x "${rra_krb5_root}/bin/krb5-config"],
-             [KRB5_CONFIG="${rra_krb5_root}/bin/krb5-config"])],
-         [AC_PATH_PROG([KRB5_CONFIG], [krb5-config], [],
-             [${PATH}:/usr/kerberos/bin])])
-     AS_IF([test x"$KRB5_CONFIG" != x && test -x "$KRB5_CONFIG"],
-         [AC_CACHE_CHECK([for krb5 support in krb5-config],
-             [rra_cv_lib_krb5_config],
-             [AS_IF(["$KRB5_CONFIG" 2>&1 | grep krb5 >/dev/null 2>&1],
-                 [rra_cv_lib_krb5_config=yes],
-                 [rra_cv_lib_krb5_config=no])])
-          AS_IF([test x"$rra_cv_lib_krb5_config" = xyes],
-              [KRB5_CPPFLAGS=`"$KRB5_CONFIG" --cflags krb5 2>/dev/null`
-               KRB5_LIBS=`"$KRB5_CONFIG" --libs krb5 2>/dev/null`],
-              [KRB5_CPPFLAGS=`"$KRB5_CONFIG" --cflags 2>/dev/null`
-               KRB5_LIBS=`"$KRB5_CONFIG" --libs 2>/dev/null`])
-          KRB5_CPPFLAGS=`echo "$KRB5_CPPFLAGS" | sed 's%-I/usr/include ?%%'`
-          _RRA_LIB_KRB5_CHECK([$1])
-          RRA_LIB_KRB5_SWITCH
-          AC_CHECK_FUNCS([krb5_get_error_message],
-              [AC_CHECK_FUNCS([krb5_free_error_message])],
-              [AC_CHECK_FUNCS([krb5_get_error_string], [],
-                  [AC_CHECK_FUNCS([krb5_get_err_txt], [],
-                      [AC_CHECK_FUNCS([krb5_svc_get_msg],
-                          [AC_CHECK_HEADERS([ibm_svc/krb5_svc.h], [], [],
-                              [#include <krb5.h>])],
-                          [AC_CHECK_HEADERS([et/com_err.h])])])])])
-          RRA_LIB_KRB5_RESTORE],
-         [_RRA_LIB_KRB5_PATHS
-          _RRA_LIB_KRB5_MANUAL([$1])])])
+    [AS_IF([test x"$rra_krb5_includedir" = x && test x"$rra_krb5_libdir" = x],
+        [_RRA_LIB_KRB5_CONFIG],
+        [_RRA_LIB_KRB5_PATHS
+         _RRA_LIB_KRB5_MANUAL([$1])])])
  rra_krb5_uses_com_err=false
- case "$LIBS" in
- *-lcom_err*)
-     rra_krb5_uses_com_err=true
-     ;;
- esac
+ AS_CASE([$LIBS], [*-lcom_err*], [rra_krb5_uses_com_err=true])
  AM_CONDITIONAL([KRB5_USES_COM_ERR], [test x"$rra_krb5_uses_com_err" = xtrue])])
 
 dnl The main macro for packages with mandatory Kerberos support.
@@ -225,20 +231,21 @@ AC_DEFUN([RRA_LIB_KRB5],
 
  AC_ARG_WITH([krb5],
     [AS_HELP_STRING([--with-krb5=DIR],
-        [Location of Kerberos v5 headers and libraries])],
+        [Location of Kerberos headers and libraries])],
     [AS_IF([test x"$withval" != xyes && test x"$withval" != xno],
         [rra_krb5_root="$withval"])])
  AC_ARG_WITH([krb5-include],
     [AS_HELP_STRING([--with-krb5-include=DIR],
-        [Location of Kerberos v5 headers])],
+        [Location of Kerberos headers])],
     [AS_IF([test x"$withval" != xyes && test x"$withval" != xno],
         [rra_krb5_includedir="$withval"])])
  AC_ARG_WITH([krb5-lib],
     [AS_HELP_STRING([--with-krb5-lib=DIR],
-        [Location of Kerberos v5 libraries])],
+        [Location of Kerberos libraries])],
     [AS_IF([test x"$withval" != xyes && test x"$withval" != xno],
         [rra_krb5_libdir="$withval"])])
- _RRA_LIB_KRB5_INTERNAL([true])])
+ _RRA_LIB_KRB5_INTERNAL([true])
+ AC_DEFINE([HAVE_KERBEROS], 1, [Define to enable Kerberos features.])])
 
 dnl The main macro for packages with optional Kerberos support.
 AC_DEFUN([RRA_LIB_KRB5_OPTIONAL],
@@ -252,19 +259,19 @@ AC_DEFUN([RRA_LIB_KRB5_OPTIONAL],
 
  AC_ARG_WITH([krb5],
     [AS_HELP_STRING([--with-krb5@<:@=DIR@:>@],
-        [Location of Kerberos v5 headers and libraries])],
+        [Location of Kerberos headers and libraries])],
     [AS_IF([test x"$withval" = xno],
         [rra_use_kerberos=false],
         [AS_IF([test x"$withval" != xyes], [rra_krb5_root="$withval"])
          rra_use_kerberos=true])])
  AC_ARG_WITH([krb5-include],
     [AS_HELP_STRING([--with-krb5-include=DIR],
-        [Location of Kerberos v5 headers])],
+        [Location of Kerberos headers])],
     [AS_IF([test x"$withval" != xyes && test x"$withval" != xno],
         [rra_krb5_includedir="$withval"])])
  AC_ARG_WITH([krb5-lib],
     [AS_HELP_STRING([--with-krb5-lib=DIR],
-        [Location of Kerberos v5 libraries])],
+        [Location of Kerberos libraries])],
     [AS_IF([test x"$withval" != xyes && test x"$withval" != xno],
         [rra_krb5_libdir="$withval"])])
 
